--- a/index.html
+++ b/index.html
@@ -7,10 +7,30 @@
     <title>World Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="conainter">
+      <h1>World Clock</h1>
+      <select name="" id="">
+        <option value="" selected>Choose a city</option>
+        <option value="">Berlin</option>
+        <option value="">New York</option>
+        <option value="">Melbourne</option>
+      </select>
+      <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">April 20th 2024</div>
+        <div class="time">11:49:45</div>
+      </div>
+      <div class="city">
+        <h2>London</h2>
+        <div class="date">April 20th 2024</div>
+        <div class="time">11:49:45</div>
+      </div>
+    </div>
     <footer>
       This project was coded by Mona Lang and is
-      <a href="">open-sourced on GitHub</a>.
+      <a href="https://github.com/mlang1988/world-clock"
+        >open-sourced on GitHub</a
+      >.
     </footer>
     <script src="javascript.js"></script>
   </body>
