--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>World Clock</title>
   </head>
   <body>
-    <div class="conainter">
+    <div class="container">
       <h1>World Clock</h1>
       <select name="" id="">
         <option value="" selected>Choose a city</option>
@@ -16,13 +16,17 @@
         <option value="">Melbourne</option>
       </select>
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">April 20th 2024</div>
+        <div class="city-info">
+          <h2>Los Angeles</h2>
+          <div class="date">April 20th 2024</div>
+        </div>
         <div class="time">11:49:45</div>
       </div>
       <div class="city">
-        <h2>London</h2>
-        <div class="date">April 20th 2024</div>
+        <div class="city-info">
+          <h2>London</h2>
+          <div class="date">April 20th 2024</div>
+        </div>
         <div class="time">11:49:45</div>
       </div>
     </div>
