--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock</title>
   </head>
   <body>
@@ -15,14 +17,14 @@
         <option value="">New York</option>
         <option value="">Melbourne</option>
       </select>
-      <div class="city">
+      <div class="city" id="los-angeles">
         <div class="city-info">
           <h2>Los Angeles</h2>
           <div class="date">April 20th 2024</div>
         </div>
         <div class="time">11:49:45</div>
       </div>
-      <div class="city">
+      <div class="city" id="london">
         <div class="city-info">
           <h2>London</h2>
           <div class="date">April 20th 2024</div>
