--- a/index.html
+++ b/index.html
@@ -11,25 +11,27 @@
   <body>
     <div class="container">
       <h1>World Clock</h1>
-      <select name="" id="">
+      <select name="" id="city">
         <option value="" selected>Choose a city</option>
-        <option value="">Berlin</option>
-        <option value="">New York</option>
-        <option value="">Melbourne</option>
+        <option value="Europe/Berlin">Berlin</option>
+        <option value="America/New_York">New York</option>
+        <option value="Australia/Melbourne">Melbourne</option>
       </select>
-      <div class="city" id="los-angeles">
-        <div class="city-info">
-          <h2>Los Angeles</h2>
-          <div class="date">April 20th 2024</div>
+      <div id="cities">
+        <div class="city" id="los-angeles">
+          <div>
+            <h2>Los Angeles</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time">11:49:45</div>
-      </div>
-      <div class="city" id="london">
-        <div class="city-info">
-          <h2>London</h2>
-          <div class="date">April 20th 2024</div>
+        <div class="city" id="london">
+          <div>
+            <h2>London</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time">11:49:45</div>
       </div>
     </div>
     <footer>
