Added current location

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1>World Clock</h1>
       <select name="" id="city">
         <option value="" selected>Choose a city</option>
+        <option value="current">My location</option>
         <option value="Europe/Berlin">Berlin</option>
         <option value="America/New_York">New York</option>
         <option value="Australia/Melbourne">Melbourne</option>
