Added refresh button and addtional options

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <option value="Europe/Berlin">Berlin</option>
         <option value="America/New_York">New York</option>
         <option value="Australia/Melbourne">Melbourne</option>
+        <option value="Asia/Kolkata">Kolkata</option>
+        <option value="Asia/Seoul">Seoul</option>
       </select>
       <div id="cities">
         <div class="city" id="los-angeles">
@@ -34,6 +36,7 @@
           <div class="time"></div>
         </div>
       </div>
+      <button class="refresh-button">Refresh</button>
     </div>
     <footer>
       This project was coded by Mona Lang and is
