Added cities to landing page

--- a/index.html
+++ b/index.html
@@ -21,9 +21,16 @@
         <option value="Asia/Seoul">Seoul</option>
       </select>
       <div id="cities">
-        <div class="city" id="los-angeles">
+        <div class="city" id="honolulu">
           <div>
-            <h2>Los Angeles</h2>
+            <h2>Honolulu</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
+        <div class="city" id="lima">
+          <div>
+            <h2>Lima</h2>
             <div class="date"></div>
           </div>
           <div class="time"></div>
@@ -31,6 +38,13 @@
         <div class="city" id="london">
           <div>
             <h2>London</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
+        <div class="city" id="singapore">
+          <div>
+            <h2>Singapore</h2>
             <div class="date"></div>
           </div>
           <div class="time"></div>
