--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock</title>
@@ -18,7 +24,7 @@
         <option value="America/New_York">New York</option>
         <option value="Australia/Melbourne">Melbourne</option>
         <option value="Asia/Kolkata">Kolkata</option>
-        <option value="Asia/Seoul">Seoul</option>
+        <option value="Africa/Cairo">Cairo</option>
       </select>
       <div id="cities">
         <div class="city" id="honolulu">
