--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <button class="refresh-button">Refresh</button>
     </div>
     <footer>
-      This project was coded by Mona Lang and is
+      This project was coded with ❤️ by <strong>Mona Lang</strong> and is
       <a href="https://github.com/mlang1988/world-clock"
         >open-sourced on GitHub</a
       >.
